Fix problem with partially hidden modal head ornament on mobile

--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -18,7 +18,7 @@
     &__container {
         position: relative;
         max-width: 500px;
-        max-height: 100vh;
+        max-height: 100svh;
         overflow-y: auto;
         box-sizing: border-box;
 
